Impleemented PATCH /connections/<connection_id>
