# connections/views.py
@@ -1,10 +1,13 @@
 from http import HTTPStatus
 
-from flask import Blueprint
+from flask import Blueprint, jsonify
+from webargs import fields
 from webargs.flaskparser import use_args
 
+from connections.models.connection import Connection, ConnectionType
 from connections.models.person import Person
 from connections.schemas import ConnectionSchema, NestedConnectionSchema, PersonSchema
+from connections.validators import enum_validator
 
 blueprint = Blueprint('connections', __name__)
 
@@ -35,3 +38,23 @@ def get_connections():
 def create_connection(connection):
     connection.save()
     return ConnectionSchema().jsonify(connection), HTTPStatus.CREATED
+
+
+@blueprint.route('/connections/<connection_id>', methods=['PATCH'])
+@use_args({
+    'connection_id': fields.Int(location='view_args', required=True),
+    'connection_type': fields.Str(
+        location='json',
+        required=True,
+        validate=enum_validator(ConnectionType)
+    )
+})
+def patch_connection(connection, connection_id):
+    existing_connection = Connection.query.get(connection_id)
+    if existing_connection:
+        existing_connection.connection_type = connection.get('connection_type')
+        existing_connection.update()
+        return ConnectionSchema().jsonify(existing_connection), HTTPStatus.OK
+    else:
+        return jsonify({'description': 'Connection does not exist'}), HTTPStatus.NOT_FOUND
+
